--- a/margin[1].html
+++ b/margin[1].html
@@ -23,6 +23,6 @@ background-color:green;
 </head>
 <body>
 <p>nri institue of technology</p>
-<h1>SAI SRIHARSHA</h1>
+<h1>PRERANA</h1>
 </body>
 </html>
